--- a/综合基础/金标尺复习题勘误/复习题勘误-公文题-多选.md
+++ b/综合基础/金标尺复习题勘误/复习题勘误-公文题-多选.md
@@ -349,7 +349,7 @@
     C.主持专项业务的副职领导
     D.综合部门负责人
     
-##### jcd-59有领导被领导关系的机关行文时可采用的行文方式有
+##### jcd-59有领导被领导关系的机关行文时可采用的行文方式有()
     A.逐级行文
     B.越级行文
     C.直接行文
@@ -357,14 +357,258 @@
 
 
 
+##### jcd-60.公文写作的基本要求有()
+    A.符合党和国家的路线、方针、政策和法律法规
+    B.深入调查研究,充分进行论证,广泛听取意见
+    C 题实事求是,所提政策措施和办法切实可行
+    D.公文涉及其他地区或者部门职权施围内的事项,起草单位必须征求相关地区
+    或者部门意见,力求达成一致
+
+##### jcd-61通报有以下特点()
+    A.具有较强的时效性
+    B.具有典型性,以典型来指导工作、惩戒错误,交流情况
+    C.具有教育性,主要起宣传教育、提高认识的作用
+    D.内容单纯,行文简便
+    
+##### jcd-62.请示的主送对象可以是()
+    A 有商洽必要的平行机关
+    B.需请求其批准的不相隶属机关
+    C.直属的上级领导机关
+    D.上级业务主管部门
+    
+##### jcd-63.批复在制发前需进行认真调查,调查的内容包括()
+    A.查阅有关的规定和指示
+    B.调阅前案处理的材料
+    C.与内容涉及到的有关部门协商
+    D.调查研究请示的理由、事项与具体要求
+    
+##### jcd-4.下列各具体事项可以使用请示这一文种的有()
+    A 涉及方针政策等方面的重大问题,需要上级机关予以明确具体的指示
+    B.请求上级机关审核批准本机关无权决定的诸如编制、机构、换届改选等重大问题
+    C.请求上级机关帮助解决本机关无法解决的具体困难和问
+    D.根据规定必须履行审批程序的事项
+    
+##### jcd-65.下面几种说法中不正确的是()
+    A.接受抄送的机关可以将公文再向其他机关抄送
+    B.因特殊情况需要向上越级行文时,应同时抄送被越过的上级机关
+    C.向上级机关请求批示或批准宜用“请示”而不用“报告
+    D.主送机关必须是受文机关中级别层次高的机关,抄送机关则处须是其中级别
+    层次低的机关
+    
+##### jcd-66.下列几种文体中,具有公文法定效用的是()
+    A 函
+    B.倡议书
+    C.纪要
+    D.启事
+    
+##### jcd-67公告的主要特点是()
+    A.公布范围的广泛性
+    B.郑重宜告的庄重性
+    C.法定作者的限定性
+    D.公布内容的强制性
+    
+##### jcd-68.在函的正文结尾处,下列哪些用语可以使用()
+    A.请函复为盼
+    B.请予以大力支持为荷
+    C.希函复
+    D.特此函告
+    
+##### jcd-69.公文的保管期限一般分为()等几种。
+    A.永远
+    B.永久
+    C 长期
+    D.短期
+    
+##### jcd-0.在撰写公函时应符合以下哪些要求()
+    A.用语讲究礼节,语气委婉得体
+    B.必须使用正式公函用纸
+    C.具备正式公函的规范格式,结构完整用语准确
+    D.尊称与致意性的词语应经常使用
+    
+##### jcd-71.下列哪些事项必须在纪要的正文部分予以记述()
+    A.会议的名称与文种
+    B.会议的基本情况
+    C 会议的希望、要求或发出号召
+    D.会议讨论与决定的问题
+    
+##### jcd-72.按照通知的内容和作用划分,通知主要有()
+    A 指示性通知
+    B.知照性通知
+    C.经转性通知
+    D.部署性通知
+    
+##### jcd-73.批复具有以下几种特点()
+    A 针对性
+    B.被动性
+    C.指示性
+    D.及时性
+    
+##### jcd-74.决定的主要类型有()
+    A.指挥性决定
+    B.知照性决定
+    C.奖惩性决定
+    D.变更性决定
+    
+##### jcd-75.公文语言的基本特点和要求是()
+    A.准确
+    B.庄重
+    C.朴实
+    D.简明
+    
+##### jcd-6.公文文稿签发前,应当由发文机关办公厅(室)进行审核。审核的重点是()
+    A行文理由是否充分,行文依据是否准确
+    B.内容是否符合国家法律法规和党的路线方针政策,是否完整准确体现发文
+    机关意图,是否同现行有关公文相衔接,所提政策措施和办法是否切实可
+    C.涉及有关地区或者部门职权范围内的事项是否经过充分协商并达成一致意见
+    D.文种是否正确,格式是否规范;人名、地名、时间、数字、段落顺序、引文等是否准确;文字、数字、计量单位和标点符号等用法是否规范
+    E.其他内容是否符合公文起草的有关要求
+    
+##### jcd-77在行政公文写作中使用数字时,不应使用阿拉伯数字的是()
+    A.成文时间
+    B.发文字号
+    C.惯用语
+    D.缩略语
 
 
+##### jcd-78销毁公文的主要方式有()
+    A.焚毁
+    B 重新制成纸张
+    C.掩埋
+    D.清洗消磁
+    
+##### jcd-79.联合发文的版头可以用()的名称
+    A 联合发文的任意机关
+    B.主办机关
+    C.联署机关
+    D.其他机关
+    
+##### jcd-80公文的标题可以是
+    A发文机关名称+发文事由+文种
+    B.发文机关名称+文种
+    C.发文事由+文种
+    D.文种
+    
+##### jcd-81.下列文种可不标注主送机关的有()
+    A 公告
+    B.通告
+    C 公报
+    D.通知
+    
+##### jcd-82公文的成文日期以()为准
+    A 机关领导人的签发日期
+    B 联合发文的最后签发机关领导人的签发日期
+    C.电报的发出日期
+    D.会议通过的日期
+    
+##### jcd-83.()、党政部门与同级人民团体和行使党政职能的事业单位可以联合行文。
+    A.同级党政机关
+    B.同级党政各部门
+    C.上一级党政部门与下一级党政机关
+    D.党政机关、部门与同级军队机关、部门
+    
+##### jcd-84.题注的方式有()等。
+    A.(x年x月x日
+    B.(×年x月x日通过)
+    C.(x年×月x日x会议通过)
+    D.(X机关x年x月x日印发)
+    
+##### jcd-85.下列哪些情况可以越级行文()
+    A.情况特殊紧急,如果采用逐级行文会延误时机造成重大损失
+    B.已多次向直接的上级机关请示,但问题长期没有解决
+    C上报上级机关交办且指定直接越级上报的具体事项
+    D 有些具体事项需要越过某些机关直接询问 或者答复，如控告、检举直接上级机
+    
+##### jcd-86.公文开头适宜采用的形式有(
+    A.气氛渲染
+    B.场景描写
+    C.概述行文目的和依据
+    D.网明基本观点
+    
+##### jcd-87机关文书部门对收到的公文应当进行初审。初审的重点包括(
+    A.是否应当由本机关办理
+    B.是否符合行文规则
+    C.文种、格式是否符合要求
+    D.涉及其他部门或者地区职权范围内的事项是否经过协商
+    E是否符合公文起草的其他要求
 
+##### jcd-88.下列公文中,属于下行文的是(
+    A.报告
+    B.议案
+    C.命令
+    D.决定
+    
+##### jcd-89 要求()以及不得抄送同级机关和下级机关等。
+    A.事前行文
+    B 一事一文
+    C.必须回复
+    D.不能越级和多头请示
+    
+##### jcd-90.表彰性通报的内容主要包括()
+    A.成绩、事迹
+    B.分析、评价
+    C.表彰决定、指施
+    D.希望、号召
+    
+##### jcd-91.下列属于知照性公文的是(
+    A 公告
+    B.通告
+    C.通报
+    D.公报
+    
+##### jcd-92.以下情况可以使用通知的是()
+    A.批转下级机关公文
+    B.转发上级和不相隶属机关公文
+    C 任免和聘用干部
+    D.给下级机关布置工作
+    E.发布规章
+    
+##### jcd-93.关于批复的说法正确的有()
+    A.批复具有被动性和明确的针对性
+    B.批复标题必要时可标明"同意或批准的态度
+    C 批复撰写前必须进行充分的调查研究工作
+    D.批复是用于答复下级机关请示事项的下行文
 
+##### jcd-94.《xx省教育委员会2012年工作总结》属于()
+    A 文件式标题
+    B.文章式标题
+    C 双标题
+    D.单标题
+    
+##### jcd-95.下列有关说法,能用来说明批复有明确针对性的是(
+    A.批复只主送呈报请示的下级单位
+    B.批复的内容只答复请示的具体事项
+    C.批复的内容应予认真遵守与执行
+    D.批复的开头和结尾要与请示的标题与发文字号相互照应
+    
+##### jcd-96简报的报尾,要写明简报的()
+    A 编印单位
+    B.印发时间
+    C.发送单位
+    D 编印份数
+    
+##### jcd-97 下面句子有语病的是()
+    A.会议是在酷热的气温中召开的
+    B.这样的活动乐意使农民接受
+    C.这个季度亏损减少了两倍
+    D.这是一个很好的报告,它能引1人深思,促人猛起,催人奋进
 
+##### jcd-98公文的主送机关是直接上级机关的,下列文种可使用的有()
+    A.报告
+    B.请示
+    C.决定
+    D 函
+    
+##### jcd-99在以下的几种情况的机关之间,因工作需要往来公文,可以使用平行文的有
+    A.省财政厅与省经贸委
+    B.xx大学与市劳动局
+    C.省教委与省人民政府
+    D.县公安局与乡人民政府
 
-
-
+##### jcd-100.报告可用于陈述的事项有(
+    A.向上级汇报某一时间的工作
+    B.答复上级机关的查询、提问
+    C.向上级反映有关情况
+    D.答复群众的查询、提问
 
 
 
