--- a/综合基础/4-1.公文规范-三、公文的行文规范.md
+++ b/综合基础/4-1.公文规范-三、公文的行文规范.md
@@ -8,6 +8,11 @@
         行文关系根据隶属关系和职权范围确定。
         一般不得越级行文，特殊情况需要越级行文的，【应当同时抄送被越过的机关】。
 
+##### jc-20行文应当确有必要，（B）注意针对性和可操作性
+    A:领导决定
+    B:讲究实效
+    C:强调准确
+    D:安全保密
 
 ### （二）向上级机关行文的规则【双必】
     《条例》中对此明确规定为 6 条细则：
@@ -16,8 +21,8 @@
     原则上主送一个上级机关，根据需要同时抄送相关【上级机关和同级机关】，不抄送下级机关。
 
 ### 2.本级部门根据授权及权限向上级主管部门行文
-    党委、政府的部门向上级主管部门请示、报告重大事项，【应当】经本级党委、政府同意
-    或者授权；属于部门职权范围内的事项应当直接报送上级主管部门。
+    党委、政府的部门向上级主管部门请示、报告重大事项，【应当】经本级党委、政府同意或者授权；
+    属于部门职权范围内的事项应当直接报送上级主管部门。
 
 ### 3.不得向上级机关原文转报下级请示事项
     下级机关的请示事项，如需以本机关名义向上级机关请示，应当提出倾向性意见后上
@@ -37,7 +42,7 @@
 ### （三）向下级机关行文的规则
     《条例》中对此明确规定为 5 条细则：
 ### 1.明确主送与抄送
-    主送受理机关，根据需要抄送相关机关。重要行文应当同时抄送发文机关的直接上级机关。
+    主送受理机关，根据需要抄送相关机关。重要行文``应当``同时抄送发文机关的直接上级机关。
 
 ### 2.上级机关的有关部门经授权可向下级机关行文
     党委、政府的办公厅（室）根据本级党委、政府授权，可以向下级党委、政府行文，
@@ -69,3 +74,8 @@
 ##d### 属于党委、政府各自职权范围内的工作，应该单独行文（√）
     ### 党委、政府的部门依据职权可以相互行文。部门内设机构不得对外正式行文（×）。
         注释：除办公厅外
+
+
+### 总结：
+    一般来说根据需要抄送，双必要，越级 重要是应当
+    
