--- a/综合基础/金标尺复习题勘误/复习题勘误-公文题-单选.md
+++ b/综合基础/金标尺复习题勘误/复习题勘误-公文题-单选.md
@@ -1,372 +1,324 @@
-##### jc-1《党政机关公文处理工作条例》（）起施行。
+##### jc-1《党政机关公文处理工作条例》（A）起施行。
     A:2012.7.1
     B:2012.8.1
     C:2012.4.16
     D:2012.6.29
 
-##### jc-2《党政机关公文处理工作条例》明确指出，（）原则上主送一个上级机关
+##### jc-2《党政机关公文处理工作条例》明确指出，（A）原则上主送一个上级机关
     A:上行文
     B:下行文
     C:平行文
     D:所有公文
 
-##### jc-3《党政机关公文处理工作条例》规定，党委，政府的部门向上级主管部门请示，报告（）应当经本级党委，政府同意或者授权
-    A:重要工作
-    B:紧急工作
-    C:重大事项
-    D:专业性工作
 
-##### jc-4（）应当主持，指导重要公文起草工作
-    A:机关负责人
-    B:部门以上领导
-    C:机关主要负责人
-    D:主持工作的负责人
-
-##### jc-5需要发文机关审议的重要公文文稿，审议前由（）进行初核
+##### jc-5需要发文机关审议的重要公文文稿，审议前由（B）进行初核
     A:机关负责人
     B:发文机关办公厅（室）
     C:文秘部门
     D:本部门负责人
 
-##### jc-6（）和上行文由机关主要负责人签发
-    A:重要公文
-    B:平行文
-    C:下行文
-    D:越级传送的公文
 
-##### jc-7公文的拟制包括公文的（）三个环节。
-    A:起草 初审 核发
+##### jc-7公文的拟制包括公文的（A）三个环节。
+    A:起草 初审 核发 (七婶姐)
     B:起草 审核 签发
     C:草拟 登记 发出
     D:签收 登记 承办
 
-##### jc-8《党政机关公文处理工作条例》中发文办理的最后一个环节是（）
-    A:复核
-    B:登记
-    C:印制
-    D:核发
 
-##### jc-9涉密公文应当通过（），邮政纪要通信，城市纪要文件交换站或者收发机关机要收发人员进行传递。通过密码电报或者符合国际保密规定的计算机信息系统进行传输。
+##### jc-9涉密公文应当通过（A），邮政机要通信，城市纪要文件交换站或者收发机关机要收发人员进行传递。通过密码电报或者符合国际保密规定的计算机信息系统进行传输。
     A:机要交通
     B:互联网
     C:专用通道
     D:专人送达
 
-##### jc-10
-    A:
-    B:
-    C:
-    D:
 
-##### jc-11向下级机关的重要行文，应该抄送（）
-    A:直接上级机关
-    B:其他下级机关
-    C:同级机关
-    D:业务主管
 
-##### jc-12下级机关的请示事项，如需要本机关名义向上级机关请示，应当提出（）
+
+##### jc-12下级机关的请示事项，如需要本机关名义向上级机关请示，应当提出（B）
     A:建设性意见
     B:倾向性意见
     C:具体性建议
     D:可行性建议
 
-##### jc-13《党政机关公文处理工作条例》增加了（）和公报，同时将会议纪要改为纪要（）
+##### jc-13《党政机关公文处理工作条例》增加了（A）和公报，同时将会议纪要改为纪要
     A:决议
     B:条例
     C:指示
     D:规定
 
-##### jc-14以强制力推行的用以规定各种行为的法规，规章同于（）
+##### jc-14以强制力推行的用以规定各种行为的法规，规章同于（A）
     A:规范性文件
     B:领导指导性文件
     C:呈请性文件
     D:证明性文件
 
-##### jc-15供受文者使用的具有法定效力的正式文本，格式规范并具备各种生效标志的稿本 称作（）
-    A:草稿
-    B:定稿
-    C:正本
-    D:副本
-
-##### jc-16国家民政部和各省，直辖市，自治区民政厅（局）属于（）
-    A:指导关系
-    B:隶属关系
-    C:不相隶属关系
-    D:平行关系
-
-##### jc-17请示可以直接交给上级机关负责人个人的是（）
+##### jc-17请示可以直接交给上级机关负责人个人的是（A）
     A:上级机关负责人直接交办的事项
     B:与领导人直接相关的事项
     C:重要文件
     D:机密文件
 
-##### jc-18接受请示的机关应对请示事项表明是否批准的态度或予以明确的指示。这句话反映了请示具有何种特性（）
+##### jc-18接受请示的机关应对请示事项表明是否批准的态度或予以明确的指示。这句话反映了请示具有何种特性（A）
     A:欺复性
     B:针对性
     C:强制回复性
     D:单一性
+    本题有一定争议。本题是自考、行测、老教材
+    时期中的经典考题,选项A愿为被动性,改造之后难度加大。但新版教材表述为期复性,以官方教材为依据,应选A。
 
-##### jc-19两个或者两个以上机关联合行文时，必须做好（）工作
+##### jc-19两个或者两个以上机关联合行文时，必须做好（D）工作
     A:审核
     B:签发
     C:签署
     D:会签
 
-##### jc-20行文应当确有必要，（）注意针对性和可操作性
-    A:领导决定
-    B:讲究实效
-    C:强调准确
-    D:安全保密
 
-##### jc-21引用公文应当（）
+##### jc-21引用公文应当（B）
     A:先引发文字号，后引标题
     B:先引标题，后引发文字号
     C:只引发文字号
     D:只引标题
 
-##### jc-22下列关于关公管理规定，错误的是（）
-    A:公文复印件作为正式公文使用时，应加盖复制机关印章
+    根据中共中央办公厅、国务院办公厅《关于对贯彻落实中发〔2004〕8号和16号文件情况进行督促检查的通知》（厅字〔2006〕4号）要求，省教育厅迅速下发通知，要求全省高校先行自查。
+
+
+##### jc-22下列关于关公管理规定，错误的是（D）
+    A:公文复印件作为正式公文使用时，应加盖``复制机关印章``
     B:公文被撤销的，视为自始无效
     C:公文被废止的，视为自废止之日起无效
     D:不具备归档和保存价值的公文，经鉴别后可以销毁
+    
+    经批准后可以销毁：而不是经鉴别后
+    
+    第三十五条　不具备归档和保存价值的公文，经批准后可以销毁。销毁涉密公文必须严格按照有关规定履行审批登记手续，确保不丢失、不漏销。个人不得私自销毁、留存涉密公文。
 
-##### jc-23适用于公布重要决定或者重大事项，应用（）
+##### jc-23适用于公布重要决定或者重大事项，应用（B）
     A:公告
     B:公报
     C:通告
     D:通报
 
-##### jc-24对重要问题提出见解和处理办法，应用（）
+##### jc-24对重要问题提出见解和处理办法，应用（C）
     A:决议
     B:决定
     C:意见
     D:命令
 
-##### jc-25应当标注签发人姓名的公文时（）
+##### jc-25应当标注签发人姓名的公文时（C）
     A:下行文
     B:平行文
     C:上行文
     D:所有公文
     
-##### jc-26.新设立的机关应当向()党委、政府的办公厅(室)提出发文立户申请。（）
-    A上级
-    B本级
+##### jc-26.新设立的机关应当向(B)党委、政府的办公厅(室)提出发文立户申请。
+    A 上级
+    B 本级
     C.下级
     D.不相隶属机关
 
 
-##### jc-27公文在传达党和国家的路线方针政策、法律法规,实施领导与管理的重要特征是
-    A.法定性
-    B.政治性
-    C.时效性
-    D.规范性
 
-
-##### jc-28.按通常划分,总结这一文种属于()
+##### jc-28.按通常划分,总结这一文种属于(D)
     A.行政公文
     B.党的公文
     C.专用文书
-    D事务文书
+    D 事务文书
  
-##### jc-29公文的作者以什么名义才可以制发公文()
+##### jc-29公文的作者以什么名义才可以制发公文(C)
     A.法人代表的名义
     B.国家公民的名义
     C.机关的名义或其负责人的名义
     D.其他社会组织与个体结合的名义
 
-##### jc-30.规章制度类文书正文表达的基本单位是()
+##### jc-30.规章制度类文书正文表达的基本单位是(C)
     A.章
     B:节
     C.条
     D.款
 
-##### jc-31.会议通知的繁简程度,应视()而定。
+##### jc-31.会议通知的繁简程度,应视(A)而定。
     A.会议内容与规模
     B.会议的重要性大小
     C.会议的广泛性大小
     D.会议的地点
 
-##### jc-32为了维护正常的领导、指导关系,具有隶属关系或业务指导关系的机关之间应基本采取（）
+##### jc-32为了维护正常的领导、指导关系,具有隶属关系或业务指导关系的机关之间应基本采取（A）
     A.逐级行文
     B.多级行文
     C.越级行文
     D.直接行文
 
-##### jc-33.公文中的成文日期应写为()
+##### jc-33.公文中的成文日期应写为(C)
     A.13年6月18日
     B.一三年六月十八日
     C.2013年6月18日
     D.二0一三年六月十八日
+    
+    7.3.5.4成文日期中的数字
+    用阿拉伯数字将年、月、日标全，年份应标全称，月、日不编虚位(即1不编为01)。
 
-##### jc-34紧急公文或者重要公文应当由()负责催办。
-    A机关负责人
-    B.专人
-    C.办公厅(室)负责人
-    D.文秘人员
 
-##### jc-35某单位准备将前一阶段开展基层组织建设年活动情况发一个通报,应选用()
+
+##### jc-35某单位准备将前一阶段开展基层组织建设年活动情况发一个通报,应选用(C)
     A.表扬通报
     B.批评通报
     C.情况通报
     D.奖惩通报
 
-##### jc-36.印发类通知是指印发()的文件。
-    A.上级机关
-    B.下级机关
-    C.平级机关
-    D.本机关
 
-##### jc-37.可以平行也可以下行的公文是()
+
+##### jc-37.可以平行也可以下行的公文是(A)
     A.通知
     B.决定
     C.报告
     D.批复
 
-##### jc-38.下列公文格式项目中,()属指定性格式项目。
+##### jc-38.下列公文格式项目中,(B)属指定性格式项目。
     A.签发人
     B.标题
     C.秘密等级
     D.附件
 
-##### jc-39联合行文,公文的成文日期以()为准
+##### jc-39联合行文,公文的成文日期以(D)为准
     A.第一个发文机关负责人签发的日期
     B.最后一个签发机关负责人签发的日期
     C.公文印发的日期
     D.会议通过的日期
 
 
-##### jc-40.()是公文主旨经常使用的表现方法。
+##### jc-40.(C)是公文主旨经常使用的表现方法。
     A.文中点题
     B.开篇点题
     C.标题点题
-    D篇末点题
+    D 篇末点题
 
-##### jc-41()是公文作者合法性和公文效力的标志
+##### jc-41(C)是公文作者合法性和公文效力的标志
     A.发文机关标志
     B.发文字号
     C.印章
     D.发文机关署名
 
-##### jc-42.业务主管部门的
-    一经上级机关批转,对受文单位都有行政约束力。
+##### jc-42.业务主管部门的一经上级机关批转,对受文单位都有行政约束力。(D)
     A.命令(令)
     B.决定
     C.决议
     D.意见
+    请批性意见
     
-##### jc-43.指挥性公文是()
+##### jc-43.指挥性公文是(A)
     A.下行文
     B.上行文
     C.平行文
     D.上下平均可
 
 
-##### jc-44.立卷的文件是已经办理完毕的。立卷的作用主要是为了()
+##### jc-44.立卷的文件是已经办理完毕的。立卷的作用主要是为了(B)
     A.反映本机关的活动
     B.便于检索和管理
     C.便关工作的
     D 便于研究有关问题
-##### jc-45.()是指对收文如何办理提出建议性处理意见
-    A.拟办
-    B.承办
-    C.批办
-    D.注办
     
-##### jc-46.下列选项中属公文表态用语的是()
+
+##### jc-46.下列选项中属公文表态用语的是(C)
     A.遵照、依照、兹有、兹因
     B.欣悉、敬悉、据报、据查
     C.同意、照办、可行、拟同意
     D.恭请、敬请、承蒙、不胜荣幸
     
-##### jc-47.公文的主旨体现了机关领导意图和发文目的,它是()
+##### jc-47.公文的主旨体现了机关领导意图和发文目的,它是(D)
     A.公文的具体要求
     B.公文的中心内容
     C.公文的重要事项
     D.公文的灵魂和统帅
-##### jc-48.中国人民银行就关于国家货币出人境限额问题发文,宜用
-    A决定
+    超纲！
+    
+##### jc-48.中国人民银行就关于国家货币出人境限额问题发文,宜用（D）
+    A 决定
     B.决议
     C.通知
     D.公告
-##### jc-49某单位因施工需要,须砍伐单位内的几株梧桐树,在给所在街道办事处绿化办公室行文时,宜用()
+    
+##### jc-49某单位因施工需要,须砍伐单位内的几株梧桐树,在给所在街道办事处绿化办公室行文时,宜用(D)
     A.请示
     B.报告
     C.通知
     D.函
     
-##### jc-50.中共xx市委号召全市党员向英雄xx同志学习,应向()行
+##### jc-50.中共xx市委号召全市党员向英雄xx同志学习,应向(D)行
     A.全市各行政机关
     B.全市各区县政府
     C.市政府各部委办
     D.下级党的机关
     
-##### jc-51.根据行文规则,对不符合行文规则的上报公文,上级机关的秘书部门()退回下级呈报机关。
+    
+##### jc-51.根据行文规则,对不符合行文规则的上报公文,上级机关的秘书部门(A)退回下级呈报机关。
     A.有权
     B 无权
     C.经请示本级机关领导后才能
     D.不能
     
-##### jc-52收文办理中的“批办”指的是(
-    A.机关或部门领导人对文件予以签发
-    B.由职能部门或有关工作人员具体承接办理公文内容所涉事务和问题
-    C.由职能部门或有关工作人员草拟意见后送机关或部门领导人审批
-    D 机关或部门领导人对来文提出决断性的处置原则和方法
-##### jc-53.“2012年11月14日中国共产党第十八次全国代表大会通过”是一篇决议,通过的时间和会议名称应写在()
-    A标题下方并加圆括号
+    （三）初审。对收到的公文应当进行初审。初审的重点是：是否应当由本机关办理，是否符合行文规则，文种、格式是否符合要求，涉及其他地区或者部门职权范围内的事项是否已经协商、会签，是否符合公文起草的其他要求。经初审不符合规定的公文，``应当及时退回``来文单位并说明理由。
+    
+    
+##### jc-53.“2012年11月14日中国共产党第十八次全国代表大会通过”是一篇决议,通过的时间和会议名称应写在(A)
+    A 标题下方并加圆括号
     B.正文开头处
     C.正文结尾处
     D.落款处
     
-##### jc-54.利用公文表彩先进,是公文什么作用的体现()
+##### jc-54.利用公文表彩先进,是公文什么作用的体现(B)
     A.凭证依据作用
     B.宣传教育作用
     C.处理公务作用
     D.规范言行作用
     
-##### jc-55.()是按照公文内容的处理要求进行分类的。
-    A.法规性公文
-    B.对外公开公文
-    C.承办性公文
-    D.收进公文
+
     
-##### jc-56.下列公文中,()必须写明主送机关。
+##### jc-56.下列公文中,(C)必须写明主送机关。
     A.决定
     B.决议
     C.报告
     D.纪要
     
-##### jc-57公文语言的第一要素是(
+##### jc-57公文语言的第一要素是(C)
     A 庄重
     B.简明
     C.准确
-    D朴实
+    D 朴实
     
-##### jc-58下面公文写作中不恰当的是
-    A我们一定要严厉打击腐败分子,把反腐败进行到底
+##### jc-58下面公文写作中不恰当的是(A)
+    A我们一定要严厉打击少数腐败分子,把反腐败进行到底
     B.以上意见如无不当,着即批转各有关单位认真遵照执行
     C我们必须排除种种不利因素,争取在第一季度建成东方贸易商厦
     D.玻璃制品厂原党委书记张某一伙,几年来大量贪污盗窃、行贿送礼,其中仅
     行贿一项即达85000元
     
-##### jc-59.向非同一组织系统的任何机关发送的文件属于()
+    打击少数腐败分子:剩下的大部分腐败分子不打击吗？
+    
+##### jc-59.向非同一组织系统的任何机关发送的文件属于(B)
     A.上行文
     B.平行文
     C.下行文
     D.越级行文
     
-##### jc-60.下列表述中不能用于公文数量表达的是()
+##### jc-60.下列表述中不能用于公文数量表达的是(A)
     A.减少了2倍
     B.两万五千里长征
-    C: 减少了50%
+    C:减少了50%
     D.一式四份
     
-##### jc-61.下面说法正确的是（）
+    减少了2倍：比如基数是100，
+        第一种情况：减少了200
+        第二种情况：减少了1/2 也就是50
+        
+    
+##### jc-61.下面说法正确的是（A）
     A.党政机关应在各自的系统内部发布文件
     B.党的机关可直接向行政部门发布指示性文件
     C.行政机关可直接向党的机关呈送报请性文件
     D.党政机关应尽可能地增加联合行文
     
-##### jc-62.下列关于公告与通告的区别表述错误的是()
+##### jc-62.下列关于公告与通告的区别表述错误的是(D)
     A.从知照范围看,公告面向国内外,而通告则只面向一定辖区范围的群众
     B.从性质上看,公告内容属重要事项或法定事项,重在知照性;通告内容专业性
     较强,或宣布行政措施,或告知具体事务,兼有知照和约束的性质
@@ -374,97 +326,80 @@
     登报、广播的方式
     D.从公文类型上看,公告属于法定公文,通告属于事务文书
     
-##### jc-63.新的规范性公文产生了,对同一事物约束、规范的旧文件应()
+##### jc-63.新的规范性公文产生了,对同一事物约束、规范的旧文件应(D)
     A 两法并有
     B.新不废旧
     C.相辅相成
     D.废止旧法
 
-##### jc-64.撰写《关于调整用电收费标准的报告》时,不符合写作要求的是()
-    A由于需呈请上级机关予以批转,所以在报告结尾提出请求批转的要求
+##### jc-64.撰写《关于调整用电收费标准的报告》时,不符合写作要求的是(D)
+    A 由于需呈请上级机关予以批转,所以在报告结尾提出请求批转的要求
     B.中心明确,重点突出。为不使报告空泛平淡,避免报告出现面面供到的情况
     C 报告内容应反映新形势下的新事物,新问题,使报告内容具有信息价值
-    D.报告中要求批准xx省四个县的收费标准要求
+    D.报告中要求批准xx省四个县的收费标准要求：（请示性要求）
 
-##### jc-65.国务院行文对一些地区和单位违反有关规定进行集资的行为进行了批评,并作出处理,同时提出了有关要求。这份文件的文种应是()
+##### jc-65.国务院行文对一些地区和单位违反有关规定进行集资的行为进行了批评,并作出处理,同时提出了有关要求。这份文件的文种应是(B)
     A.通知
     B.通报
     C.通告
     D.意见
-##### jc-66.下列发文字号中,()是正确的
+    
+##### jc-66.下列发文字号中,(D)是正确的
     A.国发(2012)1号
     B.国发[2012]第1号
     C.国发[2012]01号
     D.国发[2012]1号
     
-##### jc-67就公文内容的性质与作用而言,公报、公告、通告属()一
+    不加第，不编虚位
+    
+##### jc-67就公文内容的性质与作用而言,公报、公告、通告属(B)
     A.指挥性公文
     B.知照性公文
     C.报请性公文
     D.记录性公文
     
-##### jc-68.《重庆市广播电视局关于向南岸区国土资源和房屋管理局申请划拨建设电视转播台用地的请示》,该标题主要的错误是()
+##### jc-68.《重庆市广播电视局关于向南岸区国土资源和房屋管理局申请划拨建设电视转播台用地的请示》,该标题主要的错误是(C)
     A.违反报告不得夹带请示的规定
     B.违反应协商同意后再发文的规定
     C.错误使用文种,应使用函
-    D错误使用文种,应使用报告
-    
-##### jc-69.下列公文中,()属于公文“请示”的结束语。
-    A.特此函达。
-    B.此致,敬礼
-    C.当否,请指示
-    D.请尽快办理。
+    D 错误使用文种,应使用报告
+
     
 ##### jc-70.下列哪个事由,根据《党政机关公文处理工作条例》,不可以使用“决定”（）
-    A.严惩严重破坏社会治安的犯罪分子的工作安排
-    B.大兴安岭森林特大火灾事故的处理
-    C.授予xXx全国劳动模范的称号的嘉奖
-    D.在太平洋x地区试验运载火箭,使过往船只周知
+    A.严惩严重破坏社会治安的犯罪分子的工作安排：指挥性决定
+    B.大兴安岭森林特大火灾事故的处理：指挥性决定
+    C.授予xXx全国劳动模范的称号的嘉奖：奖惩性决定
+    D.在太平洋x地区试验运载火箭,使过往船只周知:通告或者公告
     
-##### jc-71 简报的正文常用消息报道式,其格式是()
+##### jc-71 简报的正文常用消息报道式,其格式是(C)
     A.报头、报身、报尾
     B.导语、背景、主体
     C 导语  主体 结尾
     D.开头、导语、主体
-    
-##### jc-72在正文结束时使用“散会”二字的文书是()
-    A 纪要
-    B.会议记录
-    C.简报
-    D.述职报告
 
-##### jc-73述职报告主要以()的方式进行公布
+
+##### jc-73述职报告主要以(C)的方式进行公布
     A.行文
     B.张贴
     C.宣读
     D.媒体
     
-##### jc-74.下面不属于规章制度类文书的是()
-    A.办法
-    B.条例
-    C 计划
-    D 规定
     
-##### jc-75在重大节日、喜庆仪式、隆重典礼、重大活动成功或胜利时,用来表示祝贺的礼仪性文书是()
+    
+##### jc-75在重大节日、喜庆仪式、隆重典礼、重大活动成功或胜利时,用来表示祝贺的礼仪性文书是(B)
     A.感谢信
     B.贺词
     C.慰问信
     D.启事
 
-##### jc-76.公文《xx大学关于表彰张三同志的决定》的作者是()
+##### jc-76.公文《xx大学关于表彰张三同志的决定》的作者是(D)
     A.签发该公文的校长
     B.起草该公文的刘秘书
     C.张三
     D.xx大学
+    
+    签发该公文的校长：代表的机关，如果没有D，则选择A
 
-##### jc-77公文上的签署是指(
-    A.机关领导人在公文完成稿上的亲笔签名,标志文稿形成,并可以此作为印发
-    正本的依据
-    B.以机关领导人名义发文时,签发公文的领导人亲笔在公文正本落款处签注的
-    职务、姓名
-    C.由机关领导人在收文上签注的批示性处置意见
-    D.由承办公文的机关工作人员在处理完毕的公文上签注的对该文承办的经过与
-    结果的说明
 
 ##### jc-78.下列不属于工作计划的主体内容的是()
     A.任务和目标
